tests/testerina-integration-test/src/test/resources/command-outputs/windows/InvalidDataProviderTestCase-testInvalidDataProvider.txt
Code coverage is not yet supported with single bal files. Ignoring the flag and continuing the test run...
warning: ignoring --includes flag since code coverage is not enabled
Compiling source
	invalid-data-provider-test.bal
WARNING [invalid-data-provider-test.bal:(25:5,25:58)] unused variable 'resultErr' (BCE20403)
   |
25 |     int|error resultErr = trap result.cloneWithType(int);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Running Tests

	invalid-data-provider-test.bal

testInvalidDataProvider:0 has failed.


		Test execution time :*****ms


		[fail] testInvalidDataProvider#0:

		    [fail data provider for the function testInvalidDataProvider]
			 error {ballerina/test:0}ExecutionError ("error("{ballerina/lang.function}IncompatibleArguments",message="arguments of incompatible types: argument list '(int)' cannot be passed to function expecting parameter list '(string)'")
				callableName: call moduleName: ballerina.lang.function.0 fileName: function.bal lineNumber: 37
				callableName: executeTestFunction moduleName: ballerina.test.0 fileName: serialExecuter.bal lineNumber: 129
				callableName: executeDataDrivenTest moduleName: ballerina.test.0 fileName: serialExecuter.bal lineNumber: 115
				callableName: prepareDataDrivenTest moduleName: ballerina.test.0 fileName: serialExecuter.bal lineNumber: 106
				callableName: executeDataDrivenTestSet moduleName: ballerina.test.0 fileName: serialExecuter.bal lineNumber: 63
				callableName: executeTest moduleName: ballerina.test.0 fileName: serialExecuter.bal lineNumber: 28
				callableName: executeTests moduleName: ballerina.test.0 fileName: execute.bal lineNumber: 79
				callableName: startSuite moduleName: ballerina.test.0 fileName: execute.bal lineNumber: 52
				callableName: __execute__  fileName: invalid-data-provider-test.bal lineNumber: 37
			",functionName="testInvalidDataProvider")
				callableName: handleTestFuncOutput moduleName: ballerina.test.0 fileName: execute.bal lineNumber: 318
				callableName: executeTestFunction moduleName: ballerina.test.0 fileName: serialExecuter.bal lineNumber: 130
				callableName: executeDataDrivenTest moduleName: ballerina.test.0 fileName: serialExecuter.bal lineNumber: 115
				callableName: prepareDataDrivenTest moduleName: ballerina.test.0 fileName: serialExecuter.bal lineNumber: 106
				callableName: executeDataDrivenTestSet moduleName: ballerina.test.0 fileName: serialExecuter.bal lineNumber: 63
				callableName: executeTest moduleName: ballerina.test.0 fileName: serialExecuter.bal lineNumber: 28
				callableName: executeTests moduleName: ballerina.test.0 fileName: execute.bal lineNumber: 79
				callableName: startSuite moduleName: ballerina.test.0 fileName: execute.bal lineNumber: 52
				callableName: __execute__  fileName: invalid-data-provider-test.bal lineNumber: 37
			


		0 passing
		1 failing
		0 skipped
error: there are test failures
